deployment/app.userservicenamespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: userservicenamespace
  labels:
    name: userservicenamespace
