deployment/database.pod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: userservice-db
  namespace: userservicenamespace
spec:
  serviceName: "userservice-db-h"
  replicas: 1
  selector:
    matchLabels:
      app: userservice-db
  template:
    metadata:
      labels:
        app: userservice-db
    spec:
      containers:
        - name: userservice-db
          image: postgres:alpine
          volumeMounts:
            - name: postgres-storage-pv      # Must match the name in 'volumes'
              mountPath: /var/lib/postgresql/18/docker # The internal Postgres path
          ports:
            - containerPort: 5432
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage-pv
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
